Reverted back to .single-link to keep correct global form spacing

--- a/Website/frontend/assets/css/_sass/partials/_modules.scss
+++ b/Website/frontend/assets/css/_sass/partials/_modules.scss
@@ -579,16 +579,14 @@ article.auth-sign-in {
 			margin-right: 5px;
 		}
 	}
-	input + a {
-		display: inline-block;
-		margin-top: 10px;
+	.single-link {
 		font-size: 14px;
 	}
 	@include breakpoint(medium-large) {
-		input + a {
-			margin-top: 0;
-			margin-left: 5px;
-		}	
+		.single-link {
+			display: inline-block;
+			margin-top: 30px;
+		}
 	}
 }
 
